# datavis-pro

./: .aiignore  .gitignore  CLAUDE.md  LICENSE  README.md  TAURI架构说明.md  biome.json  index.html  package-lock.json  package.json  prettier.config.ts  vite.config.ts  开发进度.md
.github/workflows/: build.yml  publish.yml
src/: App.vue  index.css  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: chart.rs  data_export.rs  data_query.rs  file_import.rs  history.rs  mod.rs  operations.rs
src-tauri/src/data/: loader.rs  mod.rs  store.rs
src-tauri/src/models/: chart.rs  dataset.rs  history.rs  mod.rs
src/components/: AboutDialog.vue  DataGrid.vue  DataInfoBar.vue  FileImport.vue  RightSidebar.vue  Sidebar.vue
src/components/chart/: BarChartDialog.vue  BaseChartDialog.vue  ChartColumnSelector.vue  ChartDisplayDialog.vue  HistogramChartDialog.vue  LineChartDialog.vue  PieChartDialog.vue  ScatterChartDialog.vue
src/components/dialogs/: CastTypesDialog.vue  ColumnSelectionDialog.vue  ExportDialog.vue  FillNullDialog.vue  FilterDialog.vue  PivotDialog.vue  RenameColumnsDialog.vue  RollingDialog.vue  SortDialog.vue  UnpivotDialog.vue
src/stores/: dataStore.ts
src/types/: dataset.ts  history.ts
src/utils/: tauri-commands.ts
