[package]
name = "datavis-pro"
version = "0.1.1"
description = "DataVis Pro - 高性能数据分析桌面应用"
authors = ["dengjianlong"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "datavis_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据处理
polars = { version = "0.52.0", features = [
    "lazy",
    "csv",
    "parquet",
    "temporal",
    "timezones",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "sql",
    "pivot",
    "rolling_window",
    "strings",
    "is_in",
    "random",
    "rows",
    "serde",
] }

polars-ops = { version = "0.52.0", features = ["pivot"] }

# Excel 支持
calamine = { version = "0.32.0", features = ["dates"] }

# 错误处理
thiserror = "2.0.18"
anyhow = "1.0"

# 异步运行时
tokio = { version = "1", features = ["fs", "sync"] }

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = "0.4"

[target.'cfg(any(target_os = "macos", windows))'.dependencies]
tauri-plugin-updater = "2"
